...
                TextField(
                    value = query,
                    onValueChange = {
                        query = it
                        viewModel.updateQuery(it)
                    },
                    placeholder = { Text("Search") },
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search),
                    keyboardActions = KeyboardActions(onSearch = {
                        val count = flattenedResults.size
                        analyticsScope.launch {
                            container.onboardingAnalytics.track(
...
                        disabledContainerColor = Color.Transparent,
                        focusedIndicatorColor = Color.Transparent,
                        unfocusedIndicatorColor = Color.Transparent
                    ),
                    modifier = Modifier
                        .weight(1f)
                        .testTag("search-input")
                        .focusRequester(searchFocusRequester)
                )
                IconButton(onClick = {
                    query = ""
                    viewModel.updateQuery("")
                    searchActive = false
...
